[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=4]
action = "ui_select"

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Operation" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -177.5
margin_right = 177.5
margin_bottom = 78.0
rect_pivot_offset = Vector2( 196.574, 78 )
custom_fonts/font = SubResource( 1 )
text = "0 + ? ="
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.4561
margin_top = -215.265
margin_right = 25.4561
margin_bottom = -56.2647
custom_fonts/font = SubResource( 3 )
text = "Numbers Attack!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.0
margin_top = -42.0
margin_right = 141.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Goal" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -167.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -50.0
margin_right = 90.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 3 )
shortcut = SubResource( 5 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 271.529
margin_top = 87.6813
margin_right = 401.529
margin_bottom = 124.681
custom_fonts/font = SubResource( 2 )
text = "Score: 0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
